fixed skill spacing

--- a/styles.css
+++ b/styles.css
@@ -538,7 +538,7 @@ input:focus {
     }
 
     .skill {
-        width: 190px;
+        width: 180px;
         margin: 5px;
     }
 
